--- a/updated_portfolio/css/portfolio.css
+++ b/updated_portfolio/css/portfolio.css
@@ -2,8 +2,19 @@ h2 {
     background-color: rgb(37, 34, 34);
     text-align: center;
     position: absolute;
-    bottom: 10px;
+    bottom: 5px;
     width: 90%;
+}
+
+@media only screen and (max-width: 1000px) {
+    h2 {
+        background-color: rgb(37, 34, 34);
+        text-align: center;
+        position: absolute;
+        bottom: 5px;
+        width: 90%;
+        font-size: 15px;
+    }
 }
 
 a {
@@ -22,12 +33,14 @@ h1 {
 
 @media only screen and (min-width: 2500px) {
     .card-img-top {
-        width: 40%;
-        height: 40%;
+        width: 30%;
+        height: 30%;
     }
 }
 @media only screen and (min-width: 350px) {
     .col-sm-md-4 {
-        margin-left: 10%;
+        margin-left: 5%;
+        width: 50%;
+        margin-bottom: 2%;;
     }
 }
