--- a/updated_portfolio/css/contact.css
+++ b/updated_portfolio/css/contact.css
@@ -13,16 +13,6 @@
                                     margin-left: 15px;
                                 }
                                 
-                                .form-control {
-                                    margin-top: 30px;
-                                }
-                                
-                                .form-control-Msg {
-                                    width: 550%;
-                                    margin-top: 35px;
-                                    margin-left: 190%;
-                                }
-                                
                                 .col-md-12 {
                                     margin-top: 10px;
                                     margin-left: 45%;
@@ -31,22 +21,7 @@
                                 body {
                                     background-color: rgb(148, 221, 221);
                                 }
-                                
-                                @media only screen and (min-width: 300px) and (max-width: 1100px) {
-                                    .form-control-Msg {
-                                        width: 300px;
-                                        margin-left: 15px;
-                                    }
+                                img {
+                                    margin-left: 24%;;
                                 }
-                                
-                                @media only screen and (max-width: 600px) {
-                                    .form-control {
-                                        width: 40%;
-                                    }
-                                }
-                                
-                                @media only screen and (max-width: 600px) {
-                                    .col-md-12 {
-                                        margin-left: 10px;
-                                    }
-                                }
+                            
