--- a/contact.css
+++ b/contact.css
@@ -6,7 +6,7 @@
                                 }
                                 
                                 hr {
-                                    background-color: gray
+                                    background-color: gray;
                                 }
                                 
                                 h1 {
