--- a/portfolio.css
+++ b/portfolio.css
@@ -29,6 +29,10 @@ h1 {
     margin-left: 15px;
 }
 
+body {
+    background-color: rgb(148, 221, 221);
+}
+
 
 
 @media only screen and (min-width: 2500px) {
